#88 login display fixed on mobile

--- a/style.css
+++ b/style.css
@@ -229,6 +229,13 @@ body{
     gap: 5vw;
 }
 
+@media only screen and (max-width: 700px) {
+    .loginWrapper{
+     
+        display: block;
+    }
+}
+
 .loginWrapper > div {
     
     text-align: right;
